vendor/asupersync/asupersync-macros/tests/compile_fail/conformance_missing_spec.rs
use asupersync_macros::conformance;

// conformance attribute requires both spec and requirement
#[conformance(requirement = "test")]
fn test_missing_spec() {}

fn main() {}
